# postile

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile  postile.control
.cargo/: config.toml
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml  postgis-images.yml  release-plz.yml  release.yml
docker/postgis/: Dockerfile  initdb-postile.sh  smoke-test.sh
src/: compression.rs  lib.rs  pg_funcs.rs
tests/pg_regress/expected/: setup.out
