[package]
name = "postile"
version = "0.0.1"
description = "PostgreSQL extension to generate map tiles"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/postile"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["postgres", "tiles", "postgresql", "tile"]
categories = ["database", "science::geo"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_postile"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
brotli = ">5, <8"
flate2 = "1"
# This must match the version of `pgrx` in `dev-dependencies` and .github/workflows/ci.yml
pgrx = "=0.12.9"

[dev-dependencies]
# This must match the version of `pgrx` in `dependencies` and .github/workflows/ci.yml
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.rust]
unused_qualifications = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(pgrx_embed)"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
