[package]
name = "postile"
version = "0.0.1"
description = "PostgreSQL extension to generate map tiles"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/postile"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["postgres", "tiles", "postgresql", "tile"]
categories = ["database", "science::geo"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
brotli = ">5, <9"
flate2 = "1"
pgrx = "=0.18.1"

[dependencies.pgrx-bench]
version = "=0.18.1"
optional = true

[dev-dependencies]
[dev-dependencies.pgrx-tests]
version = "=0.18.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.rust]
unused_qualifications = "warn"

[lints.clippy]
# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
unwrap_used = "warn"
# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
